src/test/ui/regions/regions-variance-covariant-use-contravariant.stderr
error[E0623]: lifetime mismatch
  --> $DIR/regions-variance-covariant-use-contravariant.rs:23:32
   |
LL | fn use_<'short,'long>(c: Covariant<'long>,
   |                          ----------------
LL |                       s: &'short isize,
   |                          ------------- these two types are declared with different lifetimes...
...
LL |     let _: Covariant<'short> = c;
   |                                ^ ...but data from `s` flows into `c` here

error: aborting due to previous error

